--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "gafreax/debug",
     "description": "Simple library for debugging purpose",
     "type": "library",
-	"minimum-stability":"dev",
+	"minimum-stability":"dev-master",
 	"version":"1.0.3",
     "require": {
     	"php": ">=5.3.3"
